--- a/assets/partials/new.html
+++ b/assets/partials/new.html
@@ -17,14 +17,15 @@
       <label for="space">Space</label>
       <select id="space" class="form-control"
         ng-model="mySpace"
-        ng-options="space.name for space in spaces">
+        ng-options="space.name for space in spaces"
+        ng-change="setProjectSpaceName(mySpace.name)">
       </select>
     </div>
     <div class="form-group">
-      <label for="project">Project name</label>
+      <label for="project">Project space name</label>
       <div class="input-group">
         <span class="input-group-addon">@</span>
-        <input type="text" class="form-control" id="project" placeholder="(changable)">
+        <input type="text" class="form-control" id="project" value="{{projectSpaceName}}">
       </div>
     </div>
     <button type="submit" class="btn btn-primary">Launch</button>
