--- a/assets/partials/provision.html
+++ b/assets/partials/provision.html
@@ -7,13 +7,13 @@
 <div class="container">
   <h2>Project Foo Bar <small>booting...</small></h2>
   <ul class="list-group">
-    <li class="list-group-item list-group-item-success">Creating project space</li>
-    <li class="list-group-item list-group-item-success">Uploading latest ATK server</li>
-    <li class="list-group-item list-group-item-info">Provisioning Cloudera/Spark service</li>
-    <li class="list-group-item">Provisioning database</li>
-    <li class="list-group-item">Binding services</li>
-    <li class="list-group-item">Restarting ATK server</li>
-    <li class="list-group-item">Create first user account on ATK server</li>
+    <li class="list-group-item" ng-class="findLevel(1)">Creating project space</li>
+    <li class="list-group-item" ng-class="findLevel(2)">Uploading latest ATK server</li>
+    <li class="list-group-item" ng-class="findLevel(3)">Provisioning Cloudera/Spark service</li>
+    <li class="list-group-item" ng-class="findLevel(4)">Provisioning database</li>
+    <li class="list-group-item" ng-class="findLevel(5)">Binding services</li>
+    <li class="list-group-item" ng-class="findLevel(6)">Restarting ATK server</li>
+    <li class="list-group-item" ng-class="findLevel(7)">Create first user account on ATK server</li>
   </ul>
   <p>(will redirect to next view when complete)</p>
 </div>
