added redirect to view if app is finished

--- a/assets/partials/view.html
+++ b/assets/partials/view.html
@@ -6,7 +6,7 @@
 
 <div class="container">
   <h2>Project Foo Bar <small>running</small></h2>
-  <p>Organization: <kbd>intel</kbd></p>
+  <p>Organization: <kbd>{{ app.org }}</kbd></p>
 
   <h3>Python configuration</h3>
   <p>Add the following to your python scripts to connect to this ATK server.</p>
